tests/spec/emit/snapshots/equality_generic_struct_comparable.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Box<T: Comparable> { value: T }
---
package main

type Box[T comparable] struct {
	value T
}

func (b Box[T]) equals(other Box[T]) bool {
	return b.value == other.value
}
