tests/spec/emit/snapshots/equality_matching_bound_generic_equals.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Box<T: Comparable> { value: T }
  
  impl<T: Comparable> Box<T> {
    fn equals(self, other: Box<T>) -> bool {
      self.value == other.value
    }
  }
---
package main

type Box[T comparable] struct {
	value T
}

func (b Box[T]) equals(other Box[T]) bool {
	return b.value == other.value
}
