tests/spec/emit/snapshots/equality_nested_generic_synthesized_equality.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Box<T: Comparable> { items: Slice<T> }
  
  #[equality]
  struct Wrap { box: Box<int> }
---
package main

import "slices"

type Box[T comparable] struct {
	items []T
}

func (b Box[T]) equals(other Box[T]) bool {
	return slices.Equal(b.items, other.items)
}

type Wrap struct {
	box Box[int]
}

func (w Wrap) equals(other Wrap) bool {
	return w.box.equals(other.box)
}
