tests/spec/emit/snapshots/equality_slice_of_equality_struct_dispatches_equals.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Order { id: int, tags: Slice<string> }
  
  fn test(a: Slice<Order>, b: Slice<Order>) -> bool {
    a.equals(b)
  }
---
package main

import "slices"

type Order struct {
	id   int
	tags []string
}

func (o Order) equals(other Order) bool {
	return o.id == other.id && slices.Equal(o.tags, other.tags)
}

func test(a, b []Order) bool {
	return slices.EqualFunc(a, b, func(a_1, b_1 Order) bool { return a_1.equals(b_1) })
}
