tests/spec/emit/snapshots/equality_slice_of_generic_synthesized_equality.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Box<T: Comparable> { items: Slice<T> }
  
  fn test(a: Slice<Box<int>>, b: Slice<Box<int>>) -> bool {
    a.equals(b)
  }
---
package main

import "slices"

type Box[T comparable] struct {
	items []T
}

func (b Box[T]) equals(other Box[T]) bool {
	return slices.Equal(b.items, other.items)
}

func test(a, b []Box[int]) bool {
	return slices.EqualFunc(a, b, func(a_1 Box[int], b_1 Box[int]) bool { return a_1.equals(b_1) })
}
